hphp/test/zend/good/zend/errmsg_038.php.exp
HipHop Fatal error: Properties cannot be declared final in hphp/test/zend/good/zend/errmsg_038.php on line 4
