hphp/test/zend/good/zend/errmsg_038.php
<?php

class test {
	final $var = 1;
}

echo "Done\n";
?>